# watcher-dashboard

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  .zuul.yaml  HACKING.rst  MANIFEST.in  README.rst  babel-django.cfg  babel-djangojs.cfg  lower-constraints.txt  manage.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
devstack/: local.conf.example  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst
doc/source/contributor/: contributing.rst  index.rst  playwright-testing.rst
doc/source/deploy/: installation.rst
doc/source/install/: index.rst  installation.rst
playbooks/playwright/: post.yaml  pre.yaml  run.yaml
releasenotes/notes/: audit-parameters-support-0a1e3b1e9d9f.yaml  continuous-audit-start-end-time.yaml  drop-py-2-7-198cca7f72d16655.yaml  drop-py39-8a9c99678b3e8eeb.yaml  filter-strategies-by-goal-in-create-template-9c7b1a3e9b5a.yaml  fix-actions-table-display-choices-a3b2c1d4e5f6.yaml  show-strategy-parameters-spec-2121648.yaml  skip-actions-option-a1b2c3d4e5f6.yaml
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/en_GB/LC_MESSAGES/: releasenotes.po
releasenotes/source/locale/ko_KR/LC_MESSAGES/: releasenotes.po
tools/: install_venv.py  install_venv_common.py  register_plugin.sh
watcher_dashboard/: config.py  models.py  version.py
watcher_dashboard/api/: watcher.py
watcher_dashboard/common/: client.py  exceptions.py
watcher_dashboard/conf/: watcher_policy.json  watcher_policy.yaml
watcher_dashboard/content/action_plans/: panel.py  tables.py  tabs.py  urls.py  views.py
watcher_dashboard/content/actions/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
watcher_dashboard/content/audit_templates/: forms.py  panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
watcher_dashboard/content/audits/: forms.py  panel.py  tables.py  tabs.py  urls.py  views.py
watcher_dashboard/content/goals/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
watcher_dashboard/content/strategies/: panel.py  tables.py  tabs.py  tests.py  urls.py  views.py
watcher_dashboard/enabled/: _31000_watcher_panelgroup.py  _31010_audit_templates_panel.py  _31020_audits_panel.py  _31030_action_plans_panel.py  _31040_actions_panel.py  _31060_actions_panel.py
watcher_dashboard/local/enabled/: _31000_goals_panel.py  _31010_strategies_panel.py  _31020_watcher_panelgroup.py  _31030_audit_templates_panel.py  _31040_audits_panel.py  _31050_action_plans_panel.py
watcher_dashboard/static/infra_optim/scss/: infra_optim.scss
watcher_dashboard/static/infra_optim/tests/: formset_table.js
watcher_dashboard/templates/formset_table/: _table.html  menu_formset.html
watcher_dashboard/templates/horizon/common/: _items_count_domain_page_header.html
watcher_dashboard/templates/infra_optim/: _fullscreen_workflow_base.html  _modal_form_xl.html  _modal_xl.html  _performance_chart_box.html  _top_5_box.html  _top_5_chart.html  _workflow_base.html  base.html  base_detail.html  qunit.html
watcher_dashboard/templates/infra_optim/action_plans/: _details_overview.html  _global_efficacy.html  create.html  details.html  index.html
watcher_dashboard/templates/infra_optim/actions/: _skip.html  details.html  index.html  skip.html
watcher_dashboard/templates/infra_optim/actions_history/: details.html  index.html
watcher_dashboard/templates/infra_optim/audit_templates/: _create.html  create.html  details.html  index.html
watcher_dashboard/templates/infra_optim/audits/: _create.html  create.html  details.html  index.html
watcher_dashboard/templates/infra_optim/goals/: details.html  index.html
watcher_dashboard/templates/infra_optim/logs/: index.html
watcher_dashboard/templates/infra_optim/strategies/: details.html  index.html
watcher_dashboard/templatetags/: __init__.py
watcher_dashboard/test/: formset_table_tests.py  helpers.py  selenium.py  settings.py  test_formset_table.py  urls.py
watcher_dashboard/test/api_tests/: test_client.py  test_watcher.py  watcher_tests.py
watcher_dashboard/test/integration/: playwright_base.py  playwright_config.py  test_playwright_audit_workflow.py
watcher_dashboard/test/integration_tests/: horizon.conf
watcher_dashboard/test/integration_tests/pages/admin/optimization/: auditspage.py  audittemplatespage.py
watcher_dashboard/test/integration_tests/tests/: audit_template_panel_test.py  test_audit_template_panel.py
watcher_dashboard/test/local_fixtures/: fixtures.py
watcher_dashboard/test/test_data/: exceptions.py  utils.py  watcher_data.py
watcher_dashboard/tests/: helpers.py  settings.py  test_formset_table.py
watcher_dashboard/tests/integration_tests/: horizon.conf
watcher_dashboard/tests/integration_tests/tests/: test_audit_template_panel.py
watcher_dashboard/tests/local_fixtures/: fixtures.py  logging_fixture.py
watcher_dashboard/tests/test_data/: exceptions.py  utils.py  watcher_data.py
watcher_dashboard/tests/unit/: test_config.py
watcher_dashboard/tests/unit/api/: test_client.py  test_client_utils.py  test_watcher.py
watcher_dashboard/utils/: errors.py  metering.py  tests.py  utils.py
