[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "watcher-dashboard"
description = "Watcher Management Dashboard"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://docs.openstack.org/watcher-dashboard/latest/"
Repository = "https://opendev.org/openstack/watcher-dashboard"

[tool.setuptools]
packages = [
    "watcher_dashboard"
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["C90", "E4", "E5", "E7", "E9", "F", "G", "I", "LOG", "S", "UP", "W"]
external = ["H"]
ignore = [
    # UP031 / UP032 — defer %-format and str() f-string migration; revisit in a
    # dedicated modernization change.
    "UP031",
    "UP032",
]

[tool.ruff.lint.per-file-ignores]
"watcher_dashboard/test/*" = ["S"]
# test/settings.py uses star imports inherited from openstack_dashboard.test.settings
"watcher_dashboard/test/settings.py" = ["F403", "F405"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["watcher_dashboard"]
force-single-line = true
lines-after-imports = 2
lines-between-types = 1
section-order = ["future", "standard-library", "third-party",  "first-party"]
# this is the default but just being explicit about the behavior
# in case that ever changes.
force-sort-within-sections = false

[tool.ruff.format]
quote-style = "preserve"
docstring-code-format = true
skip-magic-trailing-comma = true
